css/styles.css
body {
    font-family: 'Rubik', sans-serif;
    color: white;
    font-size: 24px;
    background-color: #181817;
    margin: 0;
    padding: 0;
}

#navbar {
    background-color: #EB5E28;
    text-align: center;
    font-size: 36px;
    font-weight: bold;
    padding: 10px 0 10px;
    z-index: 1;
    box-shadow: #0c0c0c 0 0 20px;
}

#navbar > a {
    text-decoration: none;
    color: white;
}

#container {
    background-color: #252422;
    width: 1200px;
    height: 800px;
    margin: 0 auto;
    box-shadow: #0c0c0c 15px 10px 20px,
                #0c0c0c -15px 10px 20px;
}

#notes-block {
    float: left;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 400px;
    height: 800px;
    background-color: #403D39;
}

#note-content {
    float: left;
    width: 800px;
    height: 800px;
    background-color: #252422;
}

.input {
    color: white;
    background-color: #181817;
    border: none;
    font-size: 20px;
    font-family: 'Rubik', sans-serif;
}

#note-name {
    display: block;
    float: left;
    box-sizing: border-box;
    margin: 10px auto 10px 10px;
    width: 670px;
    padding: 10px;
}

#note-name:focus, #note-text:focus, #delete-note:focus {
    outline: none;
}

#delete-note {
    display: block;
    float: left;
    box-sizing: border-box;
    margin: 10px;
    width: 100px;
    padding: 10px;
    transition: all 0.1s ease;
}

#delete-note:hover {
    background-color: #403D39;
    cursor: pointer;
}

#delete-note:active {
    background-color: #514e49;
}

#note-text {
    margin: 0 10px 10px;
    resize: none;
    width: 760px;
    height: 705px;
    padding: 10px;
}

.note-list {
    list-style: none;
    overflow: hidden;
    overflow-y: auto;
    margin: 0;
    padding: 0;
    height: 800px;
}

.note-single {
    background-color: #181817;
    text-align: center;
    width: 395px;
    height: 100px;
}

/* TODO: fix scrollbar */

#add-note {
    display: block;
    box-sizing: border-box;
    margin: 10px;
    width: 100px;
    padding: 10px;
    transition: all 0.1s ease;
}

#add-note:hover {
    background-color: #252422;
    cursor: pointer;
}

#add-note:active {
    background-color: #292926;
    border: none;
}

#add-note:focus {
    outline: none;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-track {
    background: #ffffff;
}

::-webkit-scrollbar-thumb {
    background: #a8a8a8;
}

::-webkit-scrollbar-thumb:hover {
    background: #858585;
}

::-webkit-scrollbar-thumb:active {
    background: #5f5f5f;
}

